--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,16 +9,14 @@ on:
       - "docs/**" # Et les branches docs/
   pull_request:
     branches: ["main"]
-  # Permet de lancer le workflow manuellement depuis l'onglet Actions de GitHub
   workflow_dispatch:
 
-# Permissions par défaut pour le GITHUB_TOKEN du workflow
 permissions:
-  contents: read # Permet de cloner le dépôt (nécessaire pour validate et deploy)
-  pages: write # Nécessaire pour déployer sur GitHub Pages
-  id-token: write # Nécessaire pour authentifier la demande de déploiement (OIDC)
+  contents: write # Nécessaire pour créer la PR
+  pull-requests: write # Nécessaire pour créer la PR
+  pages: write
+  id-token: write
 
-# Permet une seule exécution simultanée du workflow
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -27,9 +25,9 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4 # Utiliser la v4 pour être à jour
+      - uses: actions/checkout@v4
       - name: Set up Python 3.11
-        uses: actions/setup-python@v5 # Utiliser la v5 pour être à jour
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
       - name: Install dependencies
@@ -41,16 +39,38 @@ jobs:
       - name: Format with Black
         run: black --check .
 
-  # Job pour le déploiement sur GitHub Pages
+  # Job pour créer la Pull Request après validation sur les branches de fonctionnalité
+  create-pull-request:
+    runs-on: ubuntu-latest
+    needs: validate
+    # Ne s'exécute que sur les branches qui NE SONT PAS 'main'
+    if: github.ref != 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "chore(pr): Automated PR for ${{ github.ref_name }}"
+          title: "feat: Automated PR for ${{ github.ref_name }}"
+          body: |
+            Automated Pull Request from branch `${{ github.ref_name }}`.
+            All validations passed.
+          branch: ${{ github.ref_name }} # La branche source est celle qui a déclenché le workflow
+          base: main # La branche cible est 'main'
+
+  # Job pour le déploiement sur GitHub Pages (uniquement après merge sur main)
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: validate # Dépend du succès du job de validation
+    needs: validate # Dépend de la validation
+    # S'exécute uniquement si le workflow est déclenché par un push sur 'main'
+    if: github.ref == 'refs/heads/main'
     permissions:
-      pages: write # Nécessaire pour déployer sur GitHub Pages
-      id-token: write # Nécessaire pour authentifier la demande de déploiement
+      pages: write
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -59,7 +79,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Déploie le contenu du dossier racine du dépôt
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
