--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate
     if: github.ref != 'refs/heads/main' && github.event_name == 'push'
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       - name: Create and Auto-merge PR
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh pr create --base main --head ${{ github.ref_name }} --title "ci: Merge ${{ github.ref_name }} to main" --body "Automated PR from CI" || echo "PR already exists"
           gh pr merge --auto --squash --delete-branch
@@ -53,8 +53,8 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    needs: validate
     if: github.ref == 'refs/heads/main'
-    # Le déploiement ne doit dépendre de rien, il est déclenché par le push sur main
     steps:
       - name: Checkout
         uses: actions/checkout@v4
