--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,18 +2,14 @@ name: CI/CD
 
 on:
   push:
-    branches:
-      - "main"
-      - "feat/**" # Déclenche sur les branches feat/
-      - "fix/**"  # Et potentiellement les branches fix/
-      - "docs/**" # Et les branches docs/
+    branches: ["main", "feat/**", "fix/**", "docs/**"]
   pull_request:
     branches: ["main"]
   workflow_dispatch:
 
 permissions:
-  contents: write # Nécessaire pour créer la PR
-  pull-requests: write # Nécessaire pour créer la PR
+  contents: write
+  pull-requests: write
   pages: write
   id-token: write
 
@@ -39,38 +35,26 @@ jobs:
       - name: Format with Black
         run: black --check .
 
-  # Job pour créer la Pull Request après validation sur les branches de fonctionnalité
-  create-pull-request:
+  promote:
     runs-on: ubuntu-latest
     needs: validate
-    # Ne s'exécute que sur les branches qui NE SONT PAS 'main'
-    if: github.ref != 'refs/heads/main'
+    if: github.ref != 'refs/heads/main' && github.event_name == 'push'
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v4
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "chore(pr): Automated PR for ${{ github.ref_name }}"
-          title: "feat: Automated PR for ${{ github.ref_name }}"
-          body: |
-            Automated Pull Request from branch `${{ github.ref_name }}`.
-            All validations passed.
-          branch: ${{ github.ref_name }} # La branche source est celle qui a déclenché le workflow
-          base: main # La branche cible est 'main'
+      - name: Create and Auto-merge PR
+        run: |
+          gh pr create --base main --head ${{ github.ref_name }} --title "feat: ${{ github.ref_name }}" --body "Automated PR from CI" || echo "PR already exists"
+          gh pr merge --auto --squash --delete-branch
 
-  # Job pour le déploiement sur GitHub Pages (uniquement après merge sur main)
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: validate # Dépend de la validation
-    # S'exécute uniquement si le workflow est déclenché par un push sur 'main'
+    needs: validate
     if: github.ref == 'refs/heads/main'
-    permissions:
-      pages: write
-      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
