--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest black ruff
+          pip install black ruff
       - name: Lint with Ruff
         run: ruff check .
       - name: Format with Black
@@ -39,13 +39,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate
     if: github.ref != 'refs/heads/main' && github.event_name == 'push'
-    env:
-      GH_TOKEN: ${{ secrets.GH_PAT }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          # Le token est nécessaire pour que la CLI gh puisse opérer
+          token: ${{ secrets.GH_PAT }}
       - name: Create and Auto-merge PR
+        env:
+          # La CLI gh utilise cette variable d'environnement
+          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
-          gh pr create --base main --head ${{ github.ref_name }} --title "feat: ${{ github.ref_name }}" --body "Automated PR from CI" || echo "PR already exists"
+          gh pr create --base main --head ${{ github.ref_name }} --title "ci: Merge ${{ github.ref_name }} to main" --body "Automated PR from CI" || echo "PR already exists"
           gh pr merge --auto --squash --delete-branch
 
   deploy:
@@ -53,8 +57,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: validate
+    # Ce job se déclenche SEULEMENT quand un push arrive sur main (après la fusion de 'promote')
     if: github.ref == 'refs/heads/main'
+    needs: validate # Dépend de la validation du code sur la branche main
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -66,4 +71,4 @@ jobs:
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions-pages/deploy-pages@v4
