fix: Add test branches to CI trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI/CD
 
 on:
   push:
-    branches: ["main", "feat/**", "fix/**", "docs/**"]
+    branches: ["main", "feat/**", "fix/**", "docs/**", "test/**"]
   pull_request:
     branches: ["main"]
   workflow_dispatch:
