--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Create and Auto-merge PR
         env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh pr create --base main --head ${{ github.ref_name }} --title "ci: Merge ${{ github.ref_name }} to main" --body "Automated PR from CI" || echo "PR already exists"
           gh pr merge --auto --squash --delete-branch
