ci: Merge test/ci-full-validation to main (#7)
* chore(ci): align ci.yml with standards and trigger full cycle

* docs: final update of CV content and structure with manual PDF fixes

* test: full CI/CD pipeline validation with minor README update

* chore: re-trigger CI with empty commit

* chore: force final clean CI run

* chore: temporarily disable pull_request trigger to avoid concurrency cancellation

* fix(ci): restore pull_request trigger and set fetch-depth to 0 for successful promotion

* feat(ci): use GH_PAT for full permissions

* chore: trigger final CI cycle

* chore: final attempt at clean CI cycle

---------

Co-authored-by: Damien GUESDON <kisai.dg.slu@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,11 @@ jobs:
     needs: validate
     if: github.ref != 'refs/heads/main' && github.event_name == 'push'
     env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GH_TOKEN: ${{ secrets.GH_PAT }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Create and Auto-merge PR
         run: |
           gh pr create --base main --head ${{ github.ref_name }} --title "ci: Merge ${{ github.ref_name }} to main" --body "Automated PR from CI" || echo "PR already exists"
@@ -64,4 +66,4 @@ jobs:
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v4# Final CI test
