fix(ci): repair corrupted action reference in workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,4 +66,4 @@ jobs:
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4# Final CI test
+        uses: actions/deploy-pages@v4
